Troubleshoot Layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ a {
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -309,7 +309,8 @@ btn--stretched {
 .input-group .input {
     border: 0;
     flex-grow: 1;
-    padding: 1.5rem 2 rem;
+    padding: 1.5rem 2rem;
+    width:0;
 }
 
 .input-group .btn {
@@ -745,16 +746,17 @@ nav.collapsible--expanded .nav__toggler {
     max-width:670px;
 }
 
-.block-domain__prices{
+.block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
     justify-items: center;
     max-width: 700px;
     margin: 0 auto;
-}
+  }
 
 @media screen and (min-width: 768px) {
     .block-domain__prices {
@@ -776,7 +778,7 @@ nav.collapsible--expanded .nav__toggler {
 /* Features */
 .feature {
     gap: 4rem 2rem;
-    margin: 12rem 0
+    margin: 12rem 0;
 }
 
 .feature:first-of-type {
